# mcp-server

./: .env.example  Dockerfile  README.md  package.json  pyproject.toml  readme.md  requirements.txt  server.js
app/: config.py  http.py  main.py
app/mcp/: actual.py
mcp_server/: __init__.py  server.py
mcp_server/client/: __init__.py  actual_bridge.py
