[project]
name = "actual-budget-mcp-server"
version = "1.0.0"
description = "MCP server for Actual Budget integration"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
actual-mcp-server = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
