[project]
name = "actual-budget-mcp-server"
version = "1.0.0"
description = "MCP server for Actual Budget integration"
requires-python = ">=3.9"
dependencies = [
    "fastmcp>=2.14",    # MCP server framework
    "httpx>=0.27.0",    # Async HTTP client
]

[project.scripts]
actual-mcp-server = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
